# dadpy

./: .buildinfo  .coveragerc  .env.example  .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  authors.html  changelog.html  dev-requirements.in  dev-requirements.txt  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/: config.yml
.github/workflows/: bump.yml  docs.yml  pytest.yml  tox.yml
_modules/: index.html
_modules/dadpy/: dadembedding.html  dadload.html  dadread.html
_sources/: changelog.md.txt  index.md.txt  readme.md.txt
_sources/api/: dadpy.rst.txt  modules.rst.txt
api/: dadpy.html  modules.html
dadpy/: __init__.py  dadembedding.py  dadload.py
docs/: conf.py
notebooks/: demo-1.ipynb
notes/: pyproject.toml
src/: __init__.py
src/dadpy/: __init__.py  dadembedding.py  dadload.py  dadread.py  skeleton.py
tests/: conftest.py  test_dadembedding.py  test_dadload.py  test_dadpy.py  test_dadread.py  test_skeleton.py
tests/resources/: dadpy-test.csv
