[tool.poetry]
name = "dadpy"
version = "0.1.0"
description = ""
authors = ["Bell Eapen <github_public@gulfdoctor.net>"]

[tool.poetry.dependencies]
python = "^3.7"
pyarrow = "^0.17.1"
pyreadstat = "^0.3.4"
sklearn = "^0.0"
pandas = "^1.0.3"
numpy = "^1.18.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-dotenv = "^0.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
