[tool.poetry]
name = "dadpy"
version = "1.0.0"
description = "The swiss army knife for discharge abstract database"
authors = ["Bell Eapen <github_public@gulfdoctor.net>"]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/E-Health/dadpy"
homepage = "https://github.com/E-Health/dadpy"


[tool.poetry.dependencies]
python = "^3.7"
pyarrow = "^0.17.1"
pyreadstat = "^0.3.4"
sklearn = "^0.0"
pandas = "^1.0.3"
numpy = "^1.21.1"
gensim = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-dotenv = "^0.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
